# sys-for-ai-dev

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  PROJECT_STATUS.md  README.md  SYSTEM_MAP.md
Sys4AI/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
Sys4AI/adapters/: README.md
Sys4AI/assurance/: meta_agent_self_change_safety_evaluation.yaml
Sys4AI/configs/: README.md  capability_migration.toml  self_hosting_mode.toml
Sys4AI/contracts/: README.md
Sys4AI/control_records/: program_state.yaml
Sys4AI/docs/: README.md  codex_host_integration_profile.md  concepts-and-invariants.md  configuration_control_wiki_policy.md  continue_loop_policy.md  docker_decision_guide.md  format_profile_policy.md  getting-started.md  host-adapters.md  memory_retrieval_policy.md  obsidian_derivative_policy.md  requirement_trace_schema_v2_migration.md  requirement_trace_semantic_review_tx12.md  roles-and-skills.md  runtime-state.md  self-hosting.md  self_hosting_boundary_policy.md  self_hosting_mode_policy.md  skill_governance_policy.md  skill_integration_policy.md  source_authority_policy.md  system_document_spine.md  target-packages.md
Sys4AI/examples/: README.md
Sys4AI/registries/: agentjob_registry.csv  artifact_contract_registry.csv  completion_receipt_registry.csv  config_source_registry.csv  control_record_registry.csv  core_skill_proposal_registry.csv  derivative_registry.csv  director_decision_registry.csv  discovery_record_registry.csv  format_profile_registry.csv  handoff_registry.csv  local_evidence_execution_registry.csv  memory_preflight_receipt_registry.csv  object_relationship_registry.csv  prd_module_registry.csv  registry_definition_registry.csv  requirement_trace_registry.csv  role_execution_binding_registry.csv  role_registry.csv  role_skill_crosswalk.csv  skill_lifecycle_status_registry.csv  skill_registry.csv  source_registry.csv  system_layer_registry.csv  validation_contract_registry.csv
Sys4AI/schemas/: skill.schema.yaml
Sys4AI/skills/: README.md  core_skill_manifest.yaml
Sys4AI/sys_for_ai/: __init__.py  cli.py  csv_registry_surface.py  derivative_generation.py  evidence_closure.py  host_profiles.py  jsonschema_contract_surface.py  markdown_source_surface.py  prd_modules.py  prd_semantics.py  registry_io.py  role_validators.py  roles.py  safety_evaluation.py  toml_io.py  trace_flow.py  trace_migration.py  trace_validation.py  validators.py  walking_skeleton.py  yaml_control_surface.py  yaml_io.py
Sys4AI/tests/: README.md  test_cli.py  (+28 more)
development/: README.md  pyproject.toml
sys-for-ai/: .gitignore.additions  Makefile  README.md  pyproject.toml
(+1104 files in other folders)
