[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sys4ai"
version = "0.1.0"
description = "Host-neutral framework and runtime for governed agentic systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [{name = "Sys4AI contributors"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "jsonschema>=4.0,<5.0",
  "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.0,<2.0",
  "pytest>=8.0,<9.0",
]

[project.scripts]
sys4ai = "sys4ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
