[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sys4ai-development-tools"
version = "0.1.0"
description = "Repository-specific development validation for Sys4AI."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0,<7.0", "jsonschema>=4.0,<5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
sfadev = "sfadev.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfadev*"]
