[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sys-for-ai"
version = "0.1.0"
description = "Python reference scaffold for the sys-for-ai meta-agentic framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0,<7.0",
  "tomli>=2.0,<3.0; python_version < '3.11'",
  "jsonschema>=4.0,<5.0",
]

[project.scripts]
sys-for-ai = "sys_for_ai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sys_for_ai*"]
